--- a/GymApp/index.html
+++ b/GymApp/index.html
@@ -8,6 +8,6 @@
   <body>
     
     <div class = "text-2xl" id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="../src/main.jsx"></script>
   </body>
 </html>
