--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>GymGrig</title>
   </head>
   <body>
-    
     <div class = "text-2xl" id="root"></div>
-    <script type="module" src="../src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
